# CrossMobile

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BuildDefinitions.cmake  CrossMobileBuildHelpers.cmake  DexodeBuildHelpers.cmake  FixClion.cmake  iOSBuildHelpers.cmake  ios.cmake
proj/: CMakeLists.txt
proj/android/: CMakeLists.txt  build.gradle
proj/android/java/main/com/dexode/engine/: ActivityComponent.java  AdapterBridge.java  AndroidAdapter.java  BootActivity.java  NativeScreen.java
proj/android/jni/: Android.mk  AndroidAdapter.cpp  AndroidAdapter.h  AndroidView.cpp  AndroidView.h  Bridge.cpp  JniObject.h
proj/ios/: CMakeLists.txt  ColorUtils.h  DebugUtils.h  DebugUtils.mm  IosAdapter.cpp  IosAdapter.h  SelectorWrapper.h  SelectorWrapper.mm  Utils.h  Utils.mm  log.h
proj/ios/component/: Container.mm
proj/ios/component/adapter/: AdapterListProtocol.h  ListDataSourceComponent.mm
proj/ios/component/list/: List.mm  ListProtocol.h
proj/ios/component/touch/: Click.mm
proj/ios/component/view/: Button.mm  Image.mm  Layout.mm  List.mm  Loading.mm  LoadingProtocol.h  Text.mm  TextProtocol.mm  Visibility.mm
proj/ios/platform/: Context.h  Context.mm  ContextHelper.h  ContextHelper.mm  IosBridge.h  IosBridge.mm
proj/ios/screen/: BaseScreenController.h  BaseScreenController.mm
proj/ios/view/adapter/: BaseAdapter.h  BaseAdapter.mm  UserInteraction.h
proj/linux/: LinuxAdapter.cpp  LinuxAdapter.h  log.h
proj/linux/bridge/: Context.cpp  Context.h
proj/linux/component/: Container.cpp
proj/linux/component/view/: TextProtocol.cpp  Visibility.cpp
src/: Application.cpp  Application.h  Component.cpp  Component.h  Director.cpp  Director.h  Screen.cpp  Screen.h  UILoop.h
src/acme/: Assert.h  ColorUtils.h  DebugUtils.cpp  DebugUtils.h  LambdaObserver.cpp  LambdaObserver.h  Macros.h
src/acme/guard/: ChangeOnEnd.h
src/acme/text/: AttributedText.cpp  AttributedText.h  StringFastUtils.cpp  StringFastUtils.h  StringUtils.h  Utf8.cpp  Utf8.h
src/api/: ApiThreadPool.cpp  ApiThreadPool.h  Async.h  Server.cpp  Server.h  UrlBuilder.cpp  UrlBuilder.h
src/api/adapter/: Response.h
src/api/exception/: ApiException.cpp  ApiException.h  ValidateException.cpp  ValidateException.h
src/api/method/: CommonMethod.cpp  CommonMethod.h
src/bridge/: NativeAdapter.h  NativeObject.cpp  NativeObject.h  NativeObjectBuilder.cpp  NativeObjectBuilder.h  NativeView.cpp  NativeView.h  Nodect.cpp  Nodect.h
src/bridge/android/: Bridge.cpp
src/bridge/ios/: IosAdapter.h
src/bridge/linux/: LinuxAdapter.h
src/component/: Component.cpp  Component.h  ComponentSerializer.cpp  ComponentSerializer.h  Container.cpp  Container.h  Nodect.cpp  Nodect.h  NodectBuilder.cpp  NodectBuilder.h  NodectHelper.cpp  NodectHelper.h  NullContainer.h
src/component/adapter/: AdapterList.cpp  AdapterList.h  ListDataSource.h  ListDataSourceComponent.cpp  ListDataSourceComponent.h
src/component/common/: Config.cpp  Config.h  Container.cpp  Container.h  Pool.cpp  Pool.h
src/component/touch/: Click.cpp  Click.h
src/component/view/: Button.cpp  Button.h  Image.cpp  Image.h  Layout.cpp  Layout.h  List.cpp  List.h  Loading.cpp  Loading.h  NullTextProtocol.h  NullVisibility.h  Text.cpp  Text.h  TextProtocol.h  Visibility.cpp  Visibility.h
src/data/: Handler.cpp  Handler.h  Preferences.cpp  Preferences.h  Refresher.cpp  Refresher.h
src/data/provider/: DataProviderComponent.cpp  DataProviderComponent.h  Provider.cpp  Provider.h
src/data/receiver/: Receiver.cpp  Receiver.h
src/database/: Database.cpp  Database.h
src/exception/: ExcaptionHelper.h  Fail.cpp  Fail.h
src/interface/: DataSetAdapter.h
src/platform/: Bridge.cpp  Bridge.h  Context.cpp  Context.h
src/screen/: Screen.h  ScreenCreator.cpp  ScreenCreator.h  ScreenHelper.h  StateManager.cpp  StateManager.h
src/utils/: Utils.h  ViewHelper.cpp  ViewHelper.h
test/: CMakeLists.txt  ComponentTest.cpp  PreferencesTest.cpp  ScreenStateTest.cpp  TestExtractingTags.cpp  TestExtractingTags.h
test/gtest/: ProviderTest.cpp
tools/: gen-jni
